// SPDX-FileCopyrightText: 2021-present Open Networking Foundation <info@opennetworking.org>
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package atomix.storage.protocol.gossip.set;

import "atomix/primitive/meta/object.proto";
import "atomix/storage/protocol/gossip/primitive/extensions.proto";
import "gogoproto/gogo.proto";

message SetElement {
    atomix.primitive.meta.ObjectMeta meta = 1 [(atomix.storage.protocol.gossip.digest) = true, (gogoproto.embed) = true, (gogoproto.nullable) = false];
    string value = 2 [(atomix.storage.protocol.gossip.key) = true];
}
